// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateFilterProvider sets period params when calling setDateFilter 1`] = `
<DocumentFragment>
  <div>
    {"startDate":"2021-12-01T00:00:00+00:00","endDate":"2022-01-01T00:00:00+00:00","range":"Last Month"}
  </div>
</DocumentFragment>
`;

exports[`DateFilterProvider should render correctly 1`] = `
<DocumentFragment>
  <div>
    {"startDate":"2021-12-31T00:00:00+00:00","endDate":"2022-01-01T00:00:00+00:00","range":"Last 24 Hours"}
  </div>
</DocumentFragment>
`;

exports[`DateFilterProvider should render correctly with default date from url 1`] = `
<DocumentFragment>
  <div>
    {"startDate":"2021-12-31T00:00:00+00:00","endDate":"2022-01-01T00:00:00+00:00","range":"Last 24 Hours"}
  </div>
</DocumentFragment>
`;
